# platform

./: .gitignore  CMakeLists.txt  Makefile
3dpart/rapidxml/: rapidxml_print.hpp
PCI_debug/: Test.pro  algo.cpp  algo.cpp.autosave  algo.h  all.h  main.cpp
arinc/: CMakeLists.txt  all.hpp  main.cpp  main_loop.cpp  main_loop.hpp
base/: CMakeLists.txt  all.hpp  config.cpp  config.hpp  protocol.cpp  protocol.hpp  socket.cpp  socket.hpp  tree.cpp  tree.hpp
card/: CMakeLists.txt  all.hpp  combine_protocol.hpp  main.cpp  main_loop.cpp  main_loop.hpp  main_mips.cpp  main_x86_64.cpp  map.cpp  map.hpp  matrix.cpp  matrix.hpp  pci.cpp  pci.hpp  socket.cpp  socket.hpp
contour/: CMakeLists.txt  main.cpp
doc/: doxyfile
doc/html/: annotated.html  arinc_2all_8hpp.html  arinc_2main__loop_8hpp.html  base_2all_8hpp.html  card_2all_8hpp.html  card_2main__loop_8hpp.html  classCCommand.html  classCConfig.html  classCElement.html  classCHandler.html  classCMainLoop.html  classCMap.html  classCPci.html  classCProcess.html  classCVideo.html  classes.html  command_8hpp.html  config_8hpp.html  dir_433b8ae9fc9ccea95a1e02ca118710b5.html  dir_4aac067c0309e2753869e414bbda8ff1.html  dir_5c982d53a68cdbcd421152b4020263a9.html  dir_6419a289e01a54409febc2ca1491dc33.html  dir_e914ee4d4a44400f1fdb170cb4ead18a.html  exception_8hpp.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  index.html  interface_8hpp.html  main_2all_8hpp.html  map_8hpp.html  pci_8hpp.html  process_8hpp.html  protocol_8hpp.html  structs__result.html  (+1 more)
doc/html/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_10.html  all_11.html  all_12.html  all_12.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_7.html  all_7.js  all_8.html  all_9.html  all_9.js  all_a.html  all_a.js  all_b.html  all_c.html  all_c.js  all_d.html  all_d.js  all_e.html  all_e.js  all_f.html  classes_0.html  classes_0.js  classes_1.html  classes_1.js  defines_0.html  defines_0.js  defines_1.html  defines_1.js  (+50 more)
main/: CMakeLists.txt  all.hpp  command.cpp  command.hpp  interface.hpp  main.cpp  process.cpp  process.hpp  socket.cpp  socket.hpp  video.cpp  video.hpp
main/modules/: CMakeLists.txt  ann.cpp  bits.cpp  exception.hpp  gabor.cpp  german.cpp  interface.hpp  main.cpp  morph.cpp  sobel.cpp
main/modules/contour/: all.hpp  ann.cpp  approx.cpp  approx.hpp  base_cnn.cpp  base_cnn.hpp  bits.cpp  contour.hpp  gabor.cpp  morphology.cpp  my_neuro.cpp  preprocess.cpp  simple_neuro.cpp  skeleton.cpp  skeleton.hpp  sobel.cpp
pci/: .directory  CMakeLists.txt  all.hpp  main.cpp  pci.cpp  pci.hpp
